# create_python_project

./: .env  .gitignore  pyproject.toml  readme.md  requirements_dev.txt  secrets.json  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/basics/: welcome.py
tests/: test_example.py
