[metadata]
name = Create Python Project
author = Jesse Williams
author_email = jesse@negativespacesounds.com
license = UNLICENSED
description = 
url = 
platforms = osx
classifiers = 
    Programming Language :: Python :: 3.11

[options]
packages = 
    basics
    connections
    procedures
install_requires = 
    wheel>=0.38.3
python_requires = >=3.11
package_dir = =src
zip_safe = no
[options.package_data]
basics = py.typed
connections = py.typed
procedures = py.typed
